# ds-elixir-cz

./: .gitignore  .gitmodules  Bridge.hs  Elixir-cz-fairdata-solution.cabal  Elixir-cz-fairdata-solutions.cabal  Makefile  README.md
Config/: Config.hs
Config/Server/: Config.hs
FormStructure/: Chapter0.hs  Chapter1.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Common.hs  Countries.hs  FormStructure.hs  Submit.hs  Usage.hs
Server/: Elixir-cz-fairdata-solutions.cabal  Makefile  package.yaml  stack.yaml
Server/app/: App.hs  Bridge.hs  FormEngine  FormStructure  Main-Debug.hs  Main-old.hs  Main.hs  PageGenerator.hs  Texts.hs
Server/app/Model/: Respondent.hs
Server/static/css/: auto-complete.css  main.css
Server/static/js/: main.js
sql/: init.sql
src/: Actions.hs  Bridge.hs  Countries.hs  Descriptions.hs  Form.hs  FormEngine  FormStructure  Main-Debug.hs  Main.hs  Makefile  Modes.hs  Page.hs  PageGenerator.hs  compile.sh
src/Client/: Countries.hs  Descriptions.hs  DiagramDecorator.hs  Form.hs  Main.hs  Makefile  Overlay.hs  Page.hs
src/Config/: Config.hs
src/Config/Server/: Config.hs  Devel.hs  Production.hs
src/FormStructure/: Chapter0.hs  Chapter1.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Common.hs  FormStructure.hs  Submit.hs
src/Model/: Result.hs
static/js/: main.js
