name:                Elixir-cz-fairdata-solution
version:             2.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Robert Pergl
maintainer:          perglr@fit.cvut.cz
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Elixir-cz.fairdata.solution
  hs-source-dirs:      src
  main-is:             Main.hs
--  main-is:             Main-Debug.hs
  -- other-modules:       
  ghc-options: -Wall
  other-extensions:    OverloadedStrings
  build-depends:
    base,
    utf8-string,
    mtl, 
    blaze-markup,
    blaze-html,
    text,
    time,
    Spock >= 0.10 && <0.11,
    wai-middleware-static,
    wai-extra,
    postgresql-simple,
    resource-pool,
    raw-strings-qq
--    pretty-show
--    hood
  default-language:    Haskell2010